license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.DATheme"
version = "0.1.5"
description = "A visual theme for Docassemble"
readme = "README.md"
authors = [
    { name = "Sam Glover", email = "sam@samglover.net" },
]
dependencies = []

[project.urls]
Homepage = "https://samglover.net"

[tool.setuptools.packages.find]
where = [
    ".",
]
