[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.DATheme"
version = "1.1.0"
description = "A visual theme for Docassemble"
readme = "README.md"
authors = [
    { name = "Sam Glover", email = "sam@samglover.net" },
]
dependencies = []
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://samglover.net"

[tool.setuptools.packages.find]
where = [
    ".",
]
